# cits3403-project

./: .dockerignore  .gitattributes  .gitignore  .gitlab-ci.yml  Dockerfile  README.md  docker-entrypoint.sh  pyproject.toml
src/flask_app/: __init__.py  __main__.py  forms.py  settings.py
src/flask_app/admin/: controller.py  forms.py
src/flask_app/admin/static/css/: style.css
src/flask_app/admin/static/js/: code.js
src/flask_app/admin/views/: admin.html
src/flask_app/auth/: controller.py  forms.py  models.py
src/flask_app/auth/views/: login.html  signup.html  tos.html
src/flask_app/controllers/: counter.py
src/flask_app/game/: controller.py  models.py
src/flask_app/game/static/css/: code.css
src/flask_app/game/static/js/: code.js
src/flask_app/game/views/: game.html
src/flask_app/home/: controller.py
src/flask_app/home/views/: homepage.html
src/flask_app/leaderboard/: controller.py
src/flask_app/leaderboard/static/css/: leaderboard.css
src/flask_app/leaderboard/static/js/: leaderboard.js
src/flask_app/leaderboard/views/: leaderboard.html
src/flask_app/migrations/versions/: 24ce32bec1b9_add_a_map_table.py  a2df1676dc81_initial_migration.py  c408e8e6930b_add_width_and_height.py
src/flask_app/models/: count.py  countv2.py
src/flask_app/static/css/: counter.css  style.css
src/flask_app/static/js/: code.js
src/flask_app/views/: base.html  counter.html  game.html  homepage.html  login.html  signup.html
tests/: conftest.py  test_api.py  test_counter.py
tests/apis/: test_admin.py  test_auth.py  test_game.py  test_leaderboard.py  utils.py
tests/seleniums/: test_game.py
